--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
   <div id="root"></div>
+  <img src="/logo.png" alt="My Logo" width="120">
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
